# ai-engineer-month2-llm-core-apps

./: .gitignore  CLAUDE.md  README.md  api.py  client.py  invoices.py  main.py  models.py  parser.py  pyproject.toml  security.py  session.py  tool_agent.py
notes/: sample.txt
