[project]
name = "invoice-parser"
version = "0.1.0"
dependencies = [
    "instructor>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sse-starlette>=1.6.0",
]

[tool.setuptools]
py-modules = ["client", "invoices", "main", "models", "parser", "tool_agent", "api", "session", "security"]
